--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/fresh-pear/freshweather.git",
+  "homepage": "https://fresh-pear.github.io/freshweather",
   "name": "weater",
   "version": "0.1.0",
   "private": true,
